[package]
name = "rocket_async_compression"
version = "0.2.0"
edition = "2021"
description = "Response compression in both gzip and brotli formats for the Rocket webserver using the async-compression library"
license-file = "LICENSE"
keywords = ["rocket", "gzip", "brotli", "compression"]

[features]
default = ["fastest"]
fastest = []
highest = []

[dependencies]
rocket = "0.5.0-rc.2"
lazy_static = "1.4"
futures = "0.3"
log = "0.4"
async-compression = { version = "0.3", features = ["gzip", "brotli", "tokio"] }
